[tool.poetry]
name = "Retro GPT Ai Console"
version = "0.1.0"
description = ""
authors = ["rUv"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
openai = "^0.27.2"
Flask-Session = "^0.4.0"
Flask-SocketIO = "5.3.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"